k8s/api/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: moltbook-api
  namespace: moltbook
  labels:
    app: moltbook-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: moltbook-api
